--- a/templates/customadmin/dashboard.html
+++ b/templates/customadmin/dashboard.html
@@ -209,7 +209,7 @@
                     labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
                     datasets: [{
                         label: 'Monthly Sales',
-                        data: [0,1000,3000,5000,0,6000,200,3000,1500,3000,5000,950],
+                        data: [{{january_sales}},{{february_sales}},{{march_sales}},{{april_sales}},{{may_sales}},{{june_sales}},{{july_sales}},{{august_sales}},{{september_sales}},{{october_sales}},{{november_sales}},{{december_sales}}],
                         backgroundColor: 'rgba(75, 192, 192, 0.2)',
                         borderColor: 'rgba(75, 192, 192, 1)',
                         borderWidth: 1
